[gd_scene load_steps=20 format=3 uid="uid://dfrswtjop60lm"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_gwckm"]
[ext_resource type="Texture2D" uid="uid://cos5wkath4smb" path="res://Puzzle Plorb/Sprites/Plorbie.png" id="2_5wow8"]
[ext_resource type="Texture2D" uid="uid://dkc3au01flhqi" path="res://Puzzle Plorb/Sprites/Slash.png" id="3_g3ous"]
[ext_resource type="PackedScene" uid="uid://d4mlqfxaxpsdd" path="res://Scenes/slash.tscn" id="3_nx3qj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02s0g"]
atlas = ExtResource("2_5wow8")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppj2e"]
atlas = ExtResource("2_5wow8")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2cbl"]
atlas = ExtResource("2_5wow8")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_66xkc"]
atlas = ExtResource("2_5wow8")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4yxx"]
atlas = ExtResource("2_5wow8")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wu12"]
atlas = ExtResource("2_5wow8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a21f2"]
atlas = ExtResource("2_5wow8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jg5wy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02s0g")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppj2e")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2cbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66xkc")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4yxx")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wu12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a21f2")
}],
"loop": true,
"name": &"run",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8okn4"]
atlas = ExtResource("3_g3ous")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8qa"]
atlas = ExtResource("3_g3ous")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4olxm"]
atlas = ExtResource("3_g3ous")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pgqo"]
atlas = ExtResource("3_g3ous")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ateq3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8okn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4olxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pgqo")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"slash",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tt03b"]
size = Vector2(16, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_vdn4a"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_gwckm")

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_jg5wy")
animation = &"fall"
autoplay = "idle"

[node name="HitAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(13, -5)
sprite_frames = SubResource("SpriteFrames_ateq3")
animation = &"slash"
autoplay = "default"
frame = 4
frame_progress = 1.0

[node name="Collide" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_tt03b")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Hitboxboc" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_vdn4a")
debug_color = Color(0.992981, 0, 0.244303, 0.42)

[node name="PointRight" type="Marker2D" parent="."]
position = Vector2(18, -5)

[node name="PointLeft" type="Marker2D" parent="."]
position = Vector2(-18, -5)

[node name="slash" parent="." instance=ExtResource("3_nx3qj")]
unique_name_in_owner = true
position = Vector2(18, -5)

[node name="AtkSpeed" type="Timer" parent="."]
one_shot = true
